Add surfire argline to super pom, cleanup